tests/baselines/reference/unusedMultipleParameters1InMethodDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts(2,20): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts(3,13): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts (2 errors) ====
    class Dummy {
        public greeter(person: string, person2: string) {
                       ~~~~~~
!!! error TS6133: 'person' is declared but never used.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
            person2 = "dummy value";
        }
    }